[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vdv736-gtfsrt"
description = "A VDV736 compatible GTFSRT ServiceAlerts server."
authors = [{ name = "Sebastian Knopf", email = "mail@sebastian-knopf.de" }]
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = [
    "click",
    "fastapi[standard]",
    "gtfs-realtime-bindings",
    "lxml",
    "memcache",
    "paho-mqtt",
    "pytz",
    "pyvdv736>=0.1.4",
    "pyyaml",
]
requires-python = ">=3.10"

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/vdv736gtfsrt/version.py"
